@@ -1,3 +1,12 @@
+2007-03-06  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/bin.py:
+	Properly implement the getSettings method in SmartTimelineBin and
+	SmartFileBin.
+	* pitivi/objectfactory.py:
+	Cache the result of FileSourceFactory.getExportSettings() so we don't
+	calculate it every time it's being asked.
+
 2007-02-18  Edward Hervey  <edward@fluendo.com>
 
 	* configure.ac:
